# WOA_AutoBot

./: .gitignore  .impeccable.md  ANNOUNCEMENT.md  BUILD.md  GUIDE.md  MAINTENANCE.md  README.md  WOA_AutoBot.spec  WOA_AutoBot_mac.spec  WOA_AutoBot_v1.0.5.spec  adb_controller.py  build_dmg.sh  config.json  config_2.json  config_3.json  config_4.json  emulator_discovery.py  gui_launcher.py  launcher.sh  main_adb.py  nemu_ipc.py  platform_utils.py  requirements.txt  simple_ocr.py  version.json  version_info.txt  woa_debug.py  woa_stats.csv
assets/donate/: README.md
bot/: __init__.py  config.py  filter.py  tower.py
core/: __init__.py  constants.py  debug.py  platform.py  resources.py
docs/: WIKI.md
src/: __init__.py  pyproject.toml
src/application/: __init__.py  config.py  services.py
src/domain/: __init__.py  models.py
src/domain/tasks/: __init__.py  base_task.py  deice_task.py  filter_task.py
src/infrastructure/: __init__.py
src/infrastructure/adb/: __init__.py  controller.py
src/infrastructure/cv/: __init__.py  matcher.py
src/presentation/gui/: __init__.py  app.py
tests/: test_adb_controller.py  test_matcher.py
