[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "woa-autobot"
version = "2.0.0"
description = "World of Airports automation bot - 分层架构重构版"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.11"
authors = [
    {name = "WOA AutoBot Team"}
]
keywords = ["automation", "adb", "opencv", "game-bot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.10",
    "Topic :: Games/Entertainment :: Simulation",
]

dependencies = [
    # ── ADB / 设备控制 ──
    "adbutils>=2.12.0",
    "uiautomator2>=3.0.0",
    # ── 图像识别 ──
    "opencv-python>=4.8.0",
    "numpy>=1.26.0",
    "Pillow>=10.0",
    # ── GUI (CustomTkinter) ──
    "customtkinter>=5.2.0",
    "darkdetect>=0.8.0",
    # ── 配置管理 ──
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0",
    # ── 异步支持 ──
    "aiofiles>=23.0",
    # ── 网络 / XML ──
    "lxml>=5.0",
    "requests>=2.28.0",
    "certifi>=2024.0",
    # ── 性能 ──
    "orjson>=3.10.0",
    "cachetools>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pyinstaller-hooks-contrib>=2024.0",
    "black>=24.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
woa-autobot = "src.presentation.gui.app:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
py_version = "310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
